# optiga-trust-m

./: .gitignore  .gitmodules  CHANGELOG.md  CMSIS_MISRA_Exceptions.html  Code-Footprint.md  DAVE_8h.html  DAVE_8h.js  DAVE_8h__incl.map  DAVE_8h__incl.md5  DAVE_8h_source.html  DAVE__Common_8h.js  DAVE__Common_8h__dep__incl.md5  DAVE__Common_8h_source.html  DAVE__common_8h.html  DAVE__common_8h__dep__incl.map  Generated_2CLOCK__XMC4_2clock__xmc4_8h.html  Generated_2CLOCK__XMC4_2clock__xmc4_8h.js  Generated_2CLOCK__XMC4_2clock__xmc4_8h__dep__incl.map  Generated_2CLOCK__XMC4_2clock__xmc4_8h__dep__incl.md5  Generated_2CLOCK__XMC4_2clock__xmc4_8h__incl.map  Generated_2CLOCK__XMC4_2clock__xmc4_8h__incl.md5  Generated_2CLOCK__XMC4_2clock__xmc4_8h_source.html  Generated_2CPU__CTRL__XMC4_2cpu__ctrl__xmc4_8h.html  Generated_2CPU__CTRL__XMC4_2cpu__ctrl__xmc4_8h.js  Generated_2CPU__CTRL__XMC4_2cpu__ctrl__xmc4_8h__dep__incl.map  Generated_2CPU__CTRL__XMC4_2cpu__ctrl__xmc4_8h__dep__incl.md5  Generated_2CPU__CTRL__XMC4_2cpu__ctrl__xmc4_8h_source.html  Generated_2DIGITAL__IO_2digital__io_8h.html  Generated_2DIGITAL__IO_2digital__io_8h.js  Generated_2DIGITAL__IO_2digital__io_8h__dep__incl.map  Generated_2DIGITAL__IO_2digital__io_8h__dep__incl.md5  Generated_2DIGITAL__IO_2digital__io_8h__incl.map  Generated_2DIGITAL__IO_2digital__io_8h_source.html  Generated_2GLOBAL__CCU4_2global__ccu4_8h.html  Generated_2GLOBAL__CCU4_2global__ccu4_8h.js  Generated_2GLOBAL__CCU4_2global__ccu4_8h__dep__incl.map  Generated_2GLOBAL__CCU4_2global__ccu4_8h__dep__incl.md5  Generated_2GLOBAL__CCU4_2global__ccu4_8h__incl.map  Generated_2GLOBAL__CCU4_2global__ccu4_8h_source.html  Generated_2I2C__MASTER_2i2c__master_8h.html  (+3424 more)
.reuse/: dep5
LICENSES/: LicenseRef-oasis-ipr-policy.txt
certificates/: Infineon OPTIGA(TM) ECC Root CA 2.pem  Infineon OPTIGA(TM) Trust M CA 101.crt  Infineon OPTIGA(TM) Trust M CA 101.pem  Infineon OPTIGA(TM) Trust M CA 300.crt  Infineon OPTIGA(TM) Trust M CA 300.pem  OPTIGA_Trust_M_Infineon_Test_CA.crt  OPTIGA_Trust_M_Infineon_Test_CA.pem  OPTIGA_Trust_M_Infineon_Test_CA_Key.der  OPTIGA_Trust_M_Infineon_Test_CA_Key.pem  OptigaTrustEccCA306.crt  OptigaTrustRsaCA309.crt  README.md
config/: mbedtls_default_config.h
documents/: Data-and-Key-Store-Overview.md  OPTIGA_Trust_M1_Host_Library_Documentation.chm  OPTIGA_Trust_M_Host_Library_Documentation.chm  OPTIGA_Trust_M_V1_Host_Library_Documentation.chm  OPTIGA™ Trust M Solution Reference Manual v3.30.md  OPTIGA™ Trust M Solution Reference Manual.md  README.md  SRM.md
examples/: README.md  optiga_shell.c
examples/mbedtls_port/: README.md  trustm_ecdh.c  trustm_ecdsa.c  trustm_random.c  trustm_rsa.c
examples/optiga/: README.md  example_optiga_crypt_clear_auto_state.c  example_optiga_crypt_ecc_generate_keypair.c  example_optiga_crypt_ecdh.c  example_optiga_crypt_ecdsa_sign.c  example_optiga_crypt_ecdsa_verify.c  example_optiga_crypt_hash.c  example_optiga_crypt_hkdf.c  example_optiga_crypt_hmac.c  example_optiga_crypt_random.c  example_optiga_crypt_rsa_decrypt.c  example_optiga_crypt_rsa_encrypt_message.c  example_optiga_crypt_rsa_encrypt_session.c  example_optiga_crypt_rsa_generate_keypair.c  example_optiga_crypt_rsa_sign.c  example_optiga_crypt_rsa_verify.c  example_optiga_crypt_symmetric_encrypt_decrypt.c  example_optiga_crypt_symmetric_encrypt_decrypt_ecb.c  example_optiga_crypt_symmetric_generate_key.c  example_optiga_crypt_tls_prf_sha256.c  example_optiga_device_authentication.c  example_optiga_hibernate_restore.c  example_optiga_init_deinit.c  example_optiga_util_protected_update.c  example_optiga_util_read_data.c  example_optiga_util_read_uid.c  example_optiga_util_update_count.c  example_optiga_util_write_data.c  example_utilities.c
examples/utilities/: ecdsa_utils.c  optiga_trust.c  optiga_trust.h  pkcs11_trustm.c  trustm_chipinfo.c
extras/pal/: README.md  pal_crypt_mbedtls.c  pal_crypt_openssl.c  pal_crypt_wolfssl.c
include/: optiga_crypt.h  optiga_lib_config.h  optiga_lib_config_m_v1.h  optiga_lib_config_m_v3.h  optiga_lib_version.h  optiga_util.h
include/cmd/: optiga_cmd.h
include/common/: optiga_lib_common.h  optiga_lib_common_internal.h  optiga_lib_logger.h  optiga_lib_return_codes.h  optiga_lib_types.h
include/comms/: optiga_comms.h
include/ifx_i2c/: ifx_i2c.h  ifx_i2c_config.h  (+4 more)
pal/: README.md  pal_crypt_mbedtls.c  pal_crypt_openssl.c  pal_crypt_wolfssl.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+83 more)
tests/: CMakeLists.txt  README.md  core.cmake  ifx_i2c_data_layer_unit_test.c  ifx_i2c_data_layer_unit_test.h  ifx_i2c_phy_layer_unit_test.c  ifx_i2c_phy_layer_unit_test.h  ifx_i2c_presentation_layer_unit_test.c  ifx_i2c_presentation_layer_unit_test.h  ifx_i2c_transport_layer_unit_test.c  ifx_i2c_transport_layer_unit_test.h  ifx_i2c_unit_test.c  ifx_i2c_unit_test.h  libusb.cmake  link_execute.cmake  linux_i2c.cmake  linux_test.cmake  linux_uart.cmake  mbedtls_user_config.h  optiga_cmd_unit_test.c  optiga_cmd_unit_test.h  optiga_comms_ifx_i2c_unit_test.c  optiga_comms_ifx_i2c_unit_test.h  optiga_crypt_integration_test.c  optiga_crypt_integration_test.h  optiga_lib_common_unit_test.c  optiga_lib_common_unit_test.h  optiga_lib_logger_unit_test.c  optiga_lib_logger_unit_test.h  optiga_util_integration_test.c  optiga_util_integration_test.h  pal_crypt_mbedtls_unit_test.c  pal_crypt_mbedtls_unit_test.h  pal_unit_test.c  pal_unit_test.h
tests/protected_update_data_set/: aes_key_object_confidentiality.h  data_object.h  data_object_confidentiality.h  ecc_key_object_confidentiality.h  metadata_object_confidentiality.h  optiga_util_protected_update.h  rsa_key_object_confidentiality.h
(+460 files in other folders)
